增加库及界面

--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -6,8 +6,9 @@
     tools:context="com.zhakui.ishare.activity.LaunchActivity">
 
     <ImageView
+        android:id="@+id/launchImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/launch"/>
+        android:background="@drawable/launch"/>
 </RelativeLayout>
