--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="home_tab_margin">15dp</dimen>
+    <dimen name="home_tab_container_panding">8dp</dimen>
+    <dimen name="title_text_size">30sp</dimen>
 </resources>
